<resources>
    <string name="app_name">TableLayoutDemo</string>
    <string name="product_id">Product Id</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="product_qty">product qty</string>
    <string name="product_name_hint">product name</string>
    <string name="product_id_info">product id info</string>
</resources>